--- a/src/main/webapp/notes.html
+++ b/src/main/webapp/notes.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+    HTML Template for sitebricks. This has the html form and table to enter and display the data
+    However theer are placeholders for sitebricks to replace the data before serving to client
+-->
 <html>
 <head>
     <title></title>
